- Fix suggested text overflow - Hide import mode, just confusing

--- a/src/co/bookmarks/edit/form/collection/suggested.module.styl
+++ b/src/co/bookmarks/edit/form/collection/suggested.module.styl
@@ -35,6 +35,12 @@
     overflow: clip
     direction: rtl
     text-align: left
+    text-overflow: ellipsis
+
+    span {
+        direction: ltr
+        unicode-bidi: bidi-override
+    }
 }
 
 .suggestion {
